add list items and send it to the db

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
  <input type="text" id="input-field" placeholder="Enter your name">
 
  <button id="input-btn">Add To Cart</button>
+ <ul id="shopping-list">
+  <li>Carrot</li>
+  <li>Orange</li>
+ </ul>
 </div>
 
  <script src="script.js" type="module"></script>
