--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
  <div class="container">
-  <h1 class="title">Mobile Application</h1>
+  <h1 class="title">Cart System</h1>
   <img src="./images/cart.png" alt="Cart Container" srcset="" class="">
 
   <input type="text" id="input-field" placeholder="Enter your name">
